2005-08-23  jrandom     * Removed the concept of "no bandwidth limit" - if none is specified, its       16KBps in/out.     * Include ack packets in the per-peer cwin throttle (they were part of the       bandwidth limit though).     * Tweak the SSU cwin operation to get more accurrate estimates under       congestions.     * SSU improvements to resend more efficiently.     * Added a basic scheduler to eepget to fetch multiple files sequentially.
Monotone-Parent: 809e601847f434a70888930837cefe799c580ffb
Monotone-Revision: 4f3c1e090d07971409259b3c19792723bd09f03c

Monotone-Author: jrandom
Monotone-Date: 2005-08-23T21:25:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,14 @@
-$Id: history.txt,v 1.227 2005/08/17 15:05:03 jrandom Exp $
+$Id: history.txt,v 1.228 2005/08/21 13:39:06 jrandom Exp $
+
+2005-08-23  jrandom
+    * Removed the concept of "no bandwidth limit" - if none is specified, its
+      16KBps in/out.
+    * Include ack packets in the per-peer cwin throttle (they were part of the
+      bandwidth limit though).
+    * Tweak the SSU cwin operation to get more accurrate estimates under 
+      congestions.
+    * SSU improvements to resend more efficiently.
+    * Added a basic scheduler to eepget to fetch multiple files sequentially.
 
 * 2005-08-21  0.6.0.3 released
 
