2005-08-27  jrandom     * Minor logging and optimization tweaks in the router and SDK     * Use ISO-8859-1 in the XML files (thanks redzara!)     * The consolePassword config property can now be used to bypass the router       console's nonce checking, allowing CLI restarts
Monotone-Parent: c75e2f4190bda16cc19525c466966b274afd2d37
Monotone-Revision: 5fc671256d7652d114344e84e11607add6ceb4db

Monotone-Author: jrandom
Monotone-Date: 2005-08-27T22:15:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.229 2005/08/23 16:25:49 jrandom Exp $
+$Id: history.txt,v 1.230 2005/08/24 17:55:27 jrandom Exp $
+
+2005-08-27  jrandom
+    * Minor logging and optimization tweaks in the router and SDK
+    * Use ISO-8859-1 in the XML files (thanks redzara!)
+    * The consolePassword config property can now be used to bypass the router
+      console's nonce checking, allowing CLI restarts
 
 2005-08-24  jrandom
     * Catch errors with corrupt tunnel messages more gracefully (no need to 
