2005-09-02  jrandom     * Don't refuse to send a netDb store if the targetted peer has failed a       bit (the value was an arbitrary amount).     * Logging changes
Monotone-Parent: 693f080b43e3f7ecf984a165030d025eb551441e
Monotone-Revision: 023ba8f4732aec9f18a3efdd56affdd53042cbba

Monotone-Author: jrandom
Monotone-Date: 2005-09-02T18:34:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.234 2005/09/01 01:55:02 jrandom Exp $
+$Id: history.txt,v 1.235 2005/09/01 15:27:35 jrandom Exp $
+
+2005-09-02  jrandom
+    * Don't refuse to send a netDb store if the targetted peer has failed a 
+      bit (the value was an arbitrary amount).
+    * Logging changes
 
 * 2005-09-01  0.6.0.4 released
 
