2005-09-04  jrandom     * Don't persist peer profiles until we are shutting down, as the       persistence process gobbles RAM and wall time.     * Bugfix to allow you to check/uncheck the sharedClient setting on the       I2PTunnel web interface.     * Be more careful when expiring a failed tunnel message fragment so we       don't drop the data while attempting to read it.
Monotone-Parent: db637e4906307d3a858908fa9277c87f262f8d10
Monotone-Revision: 91f765233c89ff67b1ef2ce1bc32d802bccc1ab9

Monotone-Author: jrandom
Monotone-Date: 2005-09-04T19:15:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.236 2005/09/02 13:34:14 jrandom Exp $
+$Id: history.txt,v 1.237 2005/09/02 14:10:05 jrandom Exp $
+
+2005-09-04  jrandom
+    * Don't persist peer profiles until we are shutting down, as the 
+      persistence process gobbles RAM and wall time.
+    * Bugfix to allow you to check/uncheck the sharedClient setting on the
+      I2PTunnel web interface.
+    * Be more careful when expiring a failed tunnel message fragment so we 
+      don't drop the data while attempting to read it.
 
 * 2005-09-02  0.6.0.5 released
 
