2005-09-09  cervantes 	* New build due to change in build number :P (thanks ugha!)
Monotone-Parent: 4bcac94a95010a33eff4cff270df44a3fa05d990
Monotone-Revision: 17ab21ab47510c31cf73d5b0bb84fab4ac293f20

Monotone-Author: cervantes
Monotone-Date: 2005-09-10T01:13:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.240 2005/09/05 14:30:09 jrandom Exp $
+$Id: history.txt,v 1.241 2005/09/07 17:32:06 jrandom Exp $
+
+2005-09-09  cervantes
+	* New build due to change in build number :P (thanks ugha!)
 
 2005-09-07  BarkerJr
     * HTML cleanup for the router console (thanks!)
