2005-09-09  jrandom     * Added preliminary support for NAT hole punching through SSU introducers     * Honor peer test results from peers that we have an SSU session with if       those sessions are idle for 3 minutes or more.
Monotone-Parent: 17ab21ab47510c31cf73d5b0bb84fab4ac293f20
Monotone-Revision: c7f7fc607cf6306dac99deb1814dc13bb42b7d29

Monotone-Author: jrandom
Monotone-Date: 2005-09-10T04:30:36
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,12 @@
-$Id: history.txt,v 1.241 2005/09/07 17:32:06 jrandom Exp $
+$Id: history.txt,v 1.242 2005/09/09 20:13:50 cervantes Exp $
+
+2005-09-09  jrandom
+    * Added preliminary support for NAT hole punching through SSU introducers
+    * Honor peer test results from peers that we have an SSU session with if
+      those sessions are idle for 3 minutes or more.
 
 2005-09-09  cervantes
-	* New build due to change in build number :P (thanks ugha!)
+    * New build due to change in build number :P (thanks ugha!)
 
 2005-09-07  BarkerJr
     * HTML cleanup for the router console (thanks!)
