2005-09-12  jrandom     * Bugfix for skewed store which could kill a UDP thread (causing complete       comm failure and eventual OOM)
Monotone-Parent: e6a69a41c36b780b3796dc751518144bf3d4a73b
Monotone-Revision: 9c3537180b3eba8c1ef85d08962e2130055b5b6d

Monotone-Author: jrandom
Monotone-Date: 2005-09-13T01:12:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.244 2005/09/10 22:22:52 jrandom Exp $
+$Id: history.txt,v 1.245 2005/09/12 19:12:04 jrandom Exp $
+
+2005-09-12  jrandom
+    * Bugfix for skewed store which could kill a UDP thread (causing complete
+      comm failure and eventual OOM)
 
 2005-09-12  jrandom
     * More aggressively publish updated routerInfo.
