2005-09-12  jrandom     * Removed guaranteed delivery mode entirely (so existing i2phex clients       using it can get the benefits of mode=best_effort).  Guaranteed delivery       is offered at the streaming lib level.     * Improve the peer selection code for peer testing, as everyone now       supports tests.     * Give the watchdog its fangs - if it detects obscene job lag or if       clients have been unable to get a leaseSet for more than 5 minutes,       restart the router.  This was disabled a year ago due to spurious       restarts, and can be disabled by "watchdog.haltOnHang=false", but the       cause of the spurious restarts should be gone.
Monotone-Parent: 9c3537180b3eba8c1ef85d08962e2130055b5b6d
Monotone-Revision: 07408fb43286d8036290d4cb075fad370c5094de

Monotone-Author: jrandom
Monotone-Date: 2005-09-13T03:32:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,16 @@
-$Id: history.txt,v 1.245 2005/09/12 19:12:04 jrandom Exp $
+$Id: history.txt,v 1.246 2005/09/12 20:12:44 jrandom Exp $
+
+2005-09-12  jrandom
+    * Removed guaranteed delivery mode entirely (so existing i2phex clients
+      using it can get the benefits of mode=best_effort).  Guaranteed delivery
+      is offered at the streaming lib level.
+    * Improve the peer selection code for peer testing, as everyone now 
+      supports tests.
+    * Give the watchdog its fangs - if it detects obscene job lag or if 
+      clients have been unable to get a leaseSet for more than 5 minutes,
+      restart the router.  This was disabled a year ago due to spurious 
+      restarts, and can be disabled by "watchdog.haltOnHang=false", but the
+      cause of the spurious restarts should be gone.
 
 2005-09-12  jrandom
     * Bugfix for skewed store which could kill a UDP thread (causing complete
