2005-09-12 comwiz     * Migrated the router tests to junit
Monotone-Parent: 07408fb43286d8036290d4cb075fad370c5094de
Monotone-Revision: 1b9909e0482bfd294ecef9860982ab58b6aeb89c

Monotone-Author: comwiz
Monotone-Date: 2005-09-13T09:06:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.246 2005/09/12 20:12:44 jrandom Exp $
+$Id: history.txt,v 1.247 2005/09/12 22:32:30 jrandom Exp $
+
+2005-09-12  comwiz
+    * Migrated the router tests to junit
 
 2005-09-12  jrandom
     * Removed guaranteed delivery mode entirely (so existing i2phex clients
