2005-09-13  jrandom     * More careful error handling with introductions (thanks dust!)     * Fix the forceIntroducers checkbox on config.jsp (thanks Complication!)     * Hide the shitlist on the summary so it doesn't confuse new users.
Monotone-Parent: 1b9909e0482bfd294ecef9860982ab58b6aeb89c
Monotone-Revision: 99736cd2fe874d0f7b3c2f98d3f40058d9e98562

Monotone-Author: jrandom
Monotone-Date: 2005-09-13T23:02:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.247 2005/09/12 22:32:30 jrandom Exp $
+$Id: history.txt,v 1.248 2005/09/13 04:06:07 comwiz Exp $
+
+2005-09-13  jrandom
+    * More careful error handling with introductions (thanks dust!)
+    * Fix the forceIntroducers checkbox on config.jsp (thanks Complication!)
+    * Hide the shitlist on the summary so it doesn't confuse new users.
 
 2005-09-12  comwiz
     * Migrated the router tests to junit
