2005-09-15  jrandom     * Error handling for failed intro packets (thanks red.hand!)     * More carefully verify intro addresses
Monotone-Parent: 99736cd2fe874d0f7b3c2f98d3f40058d9e98562
Monotone-Revision: 0f0232b342477486c38b51afa3d298285cc8fbcf

Monotone-Author: jrandom
Monotone-Date: 2005-09-15T05:39:31
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.248 2005/09/13 04:06:07 comwiz Exp $
+$Id: history.txt,v 1.249 2005/09/13 18:02:44 jrandom Exp $
+
+2005-09-15  jrandom
+    * Error handling for failed intro packets (thanks red.hand!)
+    * More carefully verify intro addresses
 
 2005-09-13  jrandom
     * More careful error handling with introductions (thanks dust!)
