2005-09-16  jrandom     * Reject unroutable IPs in SSU like we do for the TCP transport (unless       you have i2np.udp.allowLocal=true defined - useful for private nets)
Monotone-Parent: 8b0c3fc5f555c115c258f0127f70c16af2afe2ff
Monotone-Revision: 41c12c6a41392ad13b62b75e4090c7138aed92db

Monotone-Author: jrandom
Monotone-Date: 2005-09-16T21:24:42
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.251 2005/09/15 23:12:27 jrandom Exp $
+$Id: history.txt,v 1.252 2005/09/16 13:28:27 jrandom Exp $
+
+2005-09-16  jrandom
+    * Reject unroutable IPs in SSU like we do for the TCP transport (unless
+      you have i2np.udp.allowLocal=true defined - useful for private nets)
 
 2005-09-16  jrandom
     * Adjust I2PTunnelHTTPServer so it can be used for outproxy operators 
