--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.255 2005/09/17 15:08:26 jrandom Exp $
+$Id: history.txt,v 1.256 2005/09/17 18:01:45 jrandom Exp $
+
+* 2005-09-17  0.6.0.6 released
+
+2005-09-17  jrandom
+    * Clean up syndie a bit more and bundle a default introductory post with 
+      both new installs and updates.
+    * Typo fixes on the console (thanks bar!)
 
 2005-09-17  jrandom
     * Updated the bandwidth limiter to use two tiers of bandwidth - our normal
