--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.258 2005/09/18 00:41:46 ragnarok Exp $
+$Id: history.txt,v 1.259 2005/09/18 03:50:57 ragnarok Exp $
+
+2005-09-18  jrandom
+    * Added support for pure 64bit linux with jbigi and the java service 
+      wrapper (no need for jcpuid if we're on os.arch=amd64).  Thanks mule 
+      et al for help testing!
+    * UI cleanup in Syndie (thanks gloin and bar!)
 
 2005-09-17  Ragnarok
     * Implemented a naming service using Syndie's petname db.  It's not enabled
