2005-09-21  susi     * Bugfix in susidns for deleting entries 2005-09-21  jrandom     * Add support for HTTP POST to EepGet     * Use HTTP POST for syndie bulk fetches, since there's a lot of data to       put in that URL.
Monotone-Parent: 804ea2b806fa0ee191888dbe26d0c9ea9c6f39fe
Monotone-Revision: bbfa6b2ab70c3b022f27907e7d72bce2e4ac7620

Monotone-Author: jrandom
Monotone-Date: 2005-09-21T06:43:04
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.260 2005/09/18 18:08:18 jrandom Exp $
+$Id: history.txt,v 1.261 2005/09/18 19:56:47 ragnarok Exp $
+
+2005-09-21  susi
+    * Bugfix in susidns for deleting entries
+
+2005-09-21  jrandom
+    * Add support for HTTP POST to EepGet
+    * Use HTTP POST for syndie bulk fetches, since there's a lot of data to 
+      put in that URL.
 
 2005-09-18  jrandom
     * Added support for pure 64bit linux with jbigi and the java service 
