2005-09-21  redzara     * Use ISO-8859-1 for the susidns xml
Monotone-Parent: bbfa6b2ab70c3b022f27907e7d72bce2e4ac7620
Monotone-Revision: 51c697e0c64ffa325e9c88756cf8738933a9d5b8

Monotone-Author: jrandom
Monotone-Date: 2005-09-21T23:01:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.261 2005/09/18 19:56:47 ragnarok Exp $
+$Id: history.txt,v 1.262 2005/09/21 01:43:04 jrandom Exp $
+
+2005-09-21  redzara
+    * Use ISO-8859-1 for the susidns xml
 
 2005-09-21  susi
     * Bugfix in susidns for deleting entries
